--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Palavra</title>
     <link rel="stylesheet" href="style.css" />
     <script src="termo.js"></script>
+     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <header>
