--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="main"></main>
     
     <div class="keyboard"></div>
-    <script src="app.js"></script>
+    <script src="app(old).js"></script>
   </body>
   </html>
   <style>
